[main] - fixed env template

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
-HOST=
-USER=
-PASSWORD=
-DBNAME=
-PORT=
-SSLMODE=
-TIMEZONE=
-SECRET_KEY=
+POSTGRES_HOST=localhost
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=rat123456
+POSTGRES_NAME=rate-of-things
+POSTGRES_PORT=5431
+SSLMODE=disable
+TIMEZONE=UTC
+SECRET_KEY=twoj_tajemny_klucz_serio
