[main] - fixed env template

--- a/.env.template
+++ b/.env.template
@@ -2,7 +2,11 @@ POSTGRES_HOST=localhost
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=rat123456
 POSTGRES_NAME=rate-of-things
+POSTGRES_DB=rate-of-things
 POSTGRES_PORT=5431
 SSLMODE=disable
 TIMEZONE=UTC
 SECRET_KEY=twoj_tajemny_klucz_serio
+MINIO_ROOT_USER=user
+MINIO_ROOT_PASSWORD=password
+MINIO_DEFAULT_BUCKETS=messages
